// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionButton /> Given the component was mounted to the DOM Given the loading prop is set to true should match snapshot 1`] = `
<ActionButton
  className=""
  classes={
    {
      "containerCircle": "tss-zn4st4-ActionButton-containerCircle",
      "noGap": "tss-1zr2s7-ActionButton-noGap",
      "withGap": "tss-1jype1y-ActionButton-withGap",
    }
  }
  disableClickDelay={false}
  disabled={false}
  flat={true}
  loading={true}
  noGap={false}
  onClick={[MockFunction]}
  rippleClassName=""
  rippleSize={null}
  testId={null}
  type="primary"
  wrapContent={true}
>
  Action Button
</ActionButton>
`;

exports[`<ActionButton /> Given the component was mounted to the DOM should match snapshot 1`] = `
<ActionButton
  className=""
  classes={
    {
      "containerCircle": "tss-zn4st4-ActionButton-containerCircle",
      "noGap": "tss-1zr2s7-ActionButton-noGap",
      "withGap": "tss-1jype1y-ActionButton-withGap",
    }
  }
  disableClickDelay={false}
  disabled={false}
  flat={true}
  loading={false}
  noGap={false}
  onClick={[MockFunction]}
  rippleClassName=""
  rippleSize={null}
  testId={null}
  type="primary"
  wrapContent={true}
>
  Action Button
</ActionButton>
`;
